# full_search

./: .gitignore  .metadata  Cargo.toml  Makefile.toml  README.md  pubspec.yaml
.cargo/: config.toml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/full_search/: FullSearchPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/full_search_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/integration_test/: app_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: demo.dart  demo.g.dart  main.dart  search_list.dart
example/test/: widget_test.dart
ios/: full_search.podspec
ios/Classes/: FullSearchPlugin.h  FullSearchPlugin.m  SwiftFullSearchPlugin.swift  binding.h
lib/: ffi.dart  full_search.dart
native/search/: Cargo.toml
native/search/src/: demo.rs  lib.rs  snippet.rs
native/search_ffi/: .gitignore  Cargo.toml  binding.h  build.rs
native/search_ffi/src/: demo.rs  error.rs  helper.rs  lib.rs
