[package]
name = "search"
version = "0.1.0"
authors = ["yiv <yuefengshao@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = { git = "https://github.com/tantivy-search/tantivy.git", branch = "main"}
cang-jie = { git = "https://github.com/yiv/cang-jie.git" }
#cang-jie = { path = "../../../../rust/cang-jie" }
jieba-rs = "0.6.2"
anyhow = "1.0.36"
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
htmlescape = "0.3.1"
tokio = { version = "0.2", features = ["rt-threaded", "test-util", "macros"] }
log = "0.4"